--- a/tweepy_tutorial.ipynb
+++ b/tweepy_tutorial.ipynb
@@ -25446,7 +25446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -25456,6 +25456,33 @@
      "output_type": "stream",
      "text": [
       "The available attributes and methods for Alchemy API are:\n",
+      "BASE_URL\n",
+      "ENDPOINTS\n",
+      "_AlchemyAPI__analyze\n",
+      "__doc__\n",
+      "__init__\n",
+      "__module__\n",
+      "author\n",
+      "category\n",
+      "combined\n",
+      "concepts\n",
+      "entities\n",
+      "faceTagging\n",
+      "feeds\n",
+      "imageExtraction\n",
+      "imageTagging\n",
+      "keywords\n",
+      "language\n",
+      "microformats\n",
+      "relations\n",
+      "s\n",
+      "sentiment\n",
+      "sentiment_targeted\n",
+      "taxonomy\n",
+      "text\n",
+      "text_raw\n",
+      "title\n",
+      "\n",
       "\n"
      ]
     }
@@ -25467,8 +25494,7 @@
     "from alchemyapi import AlchemyAPI as alcapi\n",
     "\n",
     "ALCAPI = alcapi() #<-- Instantiate the api\n",
-    "print 'The available attributes and methods for Alchemy API are:\\n' \n",
-    "sorted(alcapi.__dict__.keys())\n",
+    "print 'The available attributes and methods for Alchemy API are:\\n%s\\n\\n' % '\\n'.join(sorted(alcapi.__dict__.keys()))\n",
     "os.chdir(cwd)"
    ]
   },
@@ -25481,7 +25507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25492,7 +25518,7 @@
      "text": [
       "Help on method sentiment in module alchemyapi:\n",
       "\n",
-      "sentiment(self, flavor, data, options={'url': 'http://www.goodnewsnetwork.org/company-gives-employees-1000-job-well-done/'}) method of alchemyapi.AlchemyAPI instance\n",
+      "sentiment(self, flavor, data, options={}) method of alchemyapi.AlchemyAPI instance\n",
       "    Calculates the sentiment for text, a URL or HTML.\n",
       "    For an overview, please refer to: http://www.alchemyapi.com/products/features/sentiment-analysis/\n",
       "    For the docs, please refer to: http://www.alchemyapi.com/api/sentiment-analysis/\n",
@@ -25524,7 +25550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39557,7 +39583,7 @@
    "pygments_lexer": "ipython2",
    "version": "2.7.9"
   },
-  "signature": "sha256:9d9f5d21359b79155bb97e3fe3e7040d76c5f04b00551cf3b982bb425529293f"
+  "signature": "sha256:bb6416457a71282c15b8c9d0decfdcb38052fa688c457d685430559b76cf4a5c"
  },
  "nbformat": 4,
  "nbformat_minor": 0
