--- a/tweepy_tutorial.ipynb
+++ b/tweepy_tutorial.ipynb
@@ -226,8 +226,8 @@
     "consumer_key = 'eDpwuOF0vafv0M2HIuD0bTnqy'\n",
     "consumer_secret = 'JAJxnmcEUkdBNq5oIiBTs8dw5VU9vzMNci4Ds2DnI16fGXF2Lk'\n",
     "\n",
-    "access_token ='<ENTER YOURS HERE>'\n",
-    "access_token_secret = '<ENTER YOURS HERE>'\n",
+    "access_token ='3141915249-1y73cRbo1tMFn0x3UqJKKUDn4JiufavhoByJ4FE'\n",
+    "access_token_secret = 'LYwwsll0GbxiNcQgb7TrkD3vVYX3BZbrlpgoZtzvvf9m3'\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
@@ -39583,7 +39583,7 @@
    "pygments_lexer": "ipython2",
    "version": "2.7.9"
   },
-  "signature": "sha256:bb6416457a71282c15b8c9d0decfdcb38052fa688c457d685430559b76cf4a5c"
+  "signature": "sha256:2b480baf08653d5efeb81c81120790713306ed1e1c590a8531c63758a8dce267"
  },
  "nbformat": 4,
  "nbformat_minor": 0
